switched to `{{#each fruitList as |fruit|}}` syntax

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
 <h4>Simple demo demonstrating the <a href='https://www.npmjs.com/package/ember-cli-dom-stats' target='_blank'>ember-cli-dom-stats</a> addon for ember-cli</h4>
 
 <ul>
-{{#each fruit in fruitList}}
+{{#each fruitList as |fruit|}}
   <li>{{ fruit }}&nbsp;&nbsp;<button {{ action 'removeItem' fruit }}>remove</button></li>
 {{/each}}
 </ul>
